// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script defer="defer"
            src="main.js"
    >
    </script>
    <link href="main.css"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -17,5 +17,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1qb6bgzz,html._1qb6bgzz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_1wfao5x0 kt6im018 kt6im01b">
+        <div class="ngwsb80 _1qb6bgz76 _1qb6bgz66 _1qb6bgz96 _1qb6bgz86 _1qb6bgz5a kt6im018 kt6im01b _1qb6bgz32 _1qb6bgz35">
+          <span class="ngwsb80 _1qb6bgz4u kt6im00 kt6im01 kt6im021 _1d0g9qk4 kt6im0d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .ngwsb80 {
  -webkit-tap-highlight-color: transparent;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}
[data-braid-hidefocusrings] .ngwsb80 {
  outline: none;
}
.ngwsb81 {
  display: block;
}
.ngwsb82 {
  line-height: 1;
}
.ngwsb83 {
  list-style: none;
}
.ngwsb84 {
  quotes: none;
}
.ngwsb84:after,
.ngwsb84:before {
  content: "";
}
.ngwsb85 {
  border-collapse: collapse;
  border-spacing: 0;
}
.ngwsb86 {
  -webkit-appearance: none;
  appearance: none;
}
.ngwsb87 {
  background-color: transparent;
}
.ngwsb89 {
  color: inherit;
}
.ngwsb8a:disabled {
  opacity: 1;
}
.ngwsb8a::-ms-expand {
  display: none;
}
.ngwsb8c[type="number"] {
  -moz-appearance: textfield;
}
.ngwsb8c[type="number"]::-webkit-inner-spin-button,
.ngwsb8c[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.ngwsb8c::-ms-clear {
  display: none;
}
.ngwsb8c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.ngwsb8f {
  color: inherit;
  text-decoration: none;
}
._1d0g9qk4 {
  font-size: var(--_1d0g9qk0);
  line-height: var(--_1d0g9qk1);
}
._1d0g9qk4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1d0g9qk2);
}
._1d0g9qk4:after {
  content: "";
  display: table;
  margin-top: var(--_1d0g9qk3);
}
._1qb6bgz0 {
  overflow: hidden;
}
._1qb6bgz1 {
  overflow: scroll;
}
._1qb6bgz2 {
  overflow: visible;
}
._1qb6bgz3 {
  overflow: auto;
}
._1qb6bgz4 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
._1qb6bgz5 {
  outline: none;
}
._1qb6bgz6 {
  opacity: 0;
}
._1qb6bgz7 {
  z-index: 0;
}
._1qb6bgz8 {
  z-index: 1;
}
._1qb6bgz9 {
  z-index: 2;
}
._1qb6bgza {
  z-index: 90;
}
._1qb6bgzb {
  z-index: 100;
}
._1qb6bgzc {
  z-index: 200;
}
._1qb6bgzd {
  z-index: 290;
}
._1qb6bgze {
  z-index: 300;
}
._1qb6bgzf {
  z-index: 400;
}
._1qb6bgzg {
  cursor: default;
}
._1qb6bgzh {
  cursor: pointer;
}
._1qb6bgzi {
  pointer-events: none;
}
._1qb6bgzj {
  top: 0;
}
._1qb6bgzk {
  bottom: 0;
}
._1qb6bgzl {
  left: 0;
}
._1qb6bgzm {
  right: 0;
}
._1qb6bgzn {
  height: 100%;
}
._1qb6bgzo {
  height: var(--_1e94syb8);
}
._1qb6bgzp {
  width: 100%;
}
._1qb6bgzq {
  width: var(--_1e94syb8);
}
._1qb6bgzr {
  min-width: 0;
}
._1qb6bgzs {
  max-width: var(--_1e94sybz);
}
._1qb6bgzt {
  max-width: var(--_1e94syb10);
}
._1qb6bgzu {
  max-width: var(--_1e94syb11);
}
._1qb6bgzv {
  max-width: var(--_1e94syb12);
}
._1qb6bgzw {
  transition: var(--_1e94syb5f);
}
._1qb6bgzx {
  transition: var(--_1e94syb5g);
}
._1qb6bgzy:active {
  transform: var(--_1e94syb5h);
}
html._1qb6bgzz ._1qb6bgz11,
html:not(._1qb6bgzz) ._1qb6bgz10 {
  background: var(--_1e94syb1r);
}
html._1qb6bgzz ._1qb6bgz13,
html:not(._1qb6bgzz) ._1qb6bgz12 {
  background: var(--_1e94syb1s);
}
html._1qb6bgzz ._1qb6bgz15,
html:not(._1qb6bgzz) ._1qb6bgz14 {
  background: var(--_1e94syb1t);
}
html._1qb6bgzz ._1qb6bgz17,
html:not(._1qb6bgzz) ._1qb6bgz16 {
  background: var(--_1e94syb1u);
}
html._1qb6bgzz ._1qb6bgz19,
html:not(._1qb6bgzz) ._1qb6bgz18 {
  background: var(--_1e94syb1v);
}
html._1qb6bgzz ._1qb6bgz1b,
html:not(._1qb6bgzz) ._1qb6bgz1a {
  background: var(--_1e94syb1w);
}
html._1qb6bgzz ._1qb6bgz1d,
html:not(._1qb6bgzz) ._1qb6bgz1c {
  background: var(--_1e94syb1x);
}
html._1qb6bgzz ._1qb6bgz1f,
html:not(._1qb6bgzz) ._1qb6bgz1e {
  background: var(--_1e94syb1y);
}
html._1qb6bgzz ._1qb6bgz1h,
html:not(._1qb6bgzz) ._1qb6bgz1g {
  background: var(--_1e94syb1z);
}
html._1qb6bgzz ._1qb6bgz1j,
html:not(._1qb6bgzz) ._1qb6bgz1i {
  background: var(--_1e94syb20);
}
html._1qb6bgzz ._1qb6bgz1l,
html:not(._1qb6bgzz) ._1qb6bgz1k {
  background: var(--_1e94syb21);
}
html._1qb6bgzz ._1qb6bgz1n,
html:not(._1qb6bgzz) ._1qb6bgz1m {
  background: var(--_1e94syb22);
}
html._1qb6bgzz ._1qb6bgz1p,
html:not(._1qb6bgzz) ._1qb6bgz1o {
  background: var(--_1e94syb23);
}
html._1qb6bgzz ._1qb6bgz1r,
html:not(._1qb6bgzz) ._1qb6bgz1q {
  background: var(--_1e94syb24);
}
html._1qb6bgzz ._1qb6bgz1t,
html:not(._1qb6bgzz) ._1qb6bgz1s {
  background: var(--_1e94syb25);
}
html._1qb6bgzz ._1qb6bgz1v,
html:not(._1qb6bgzz) ._1qb6bgz1u {
  background: var(--_1e94syb26);
}
html._1qb6bgzz ._1qb6bgz1x,
html:not(._1qb6bgzz) ._1qb6bgz1w {
  background: var(--_1e94syb27);
}
html._1qb6bgzz ._1qb6bgz1z,
html:not(._1qb6bgzz) ._1qb6bgz1y {
  background: var(--_1e94syb28);
}
html._1qb6bgzz ._1qb6bgz21,
html:not(._1qb6bgzz) ._1qb6bgz20 {
  background: var(--_1e94syb29);
}
html._1qb6bgzz ._1qb6bgz23,
html:not(._1qb6bgzz) ._1qb6bgz22 {
  background: var(--_1e94syb2a);
}
html._1qb6bgzz ._1qb6bgz25,
html:not(._1qb6bgzz) ._1qb6bgz24 {
  background: var(--_1e94syb2b);
}
html._1qb6bgzz ._1qb6bgz27,
html:not(._1qb6bgzz) ._1qb6bgz26 {
  background: var(--_1e94syb2c);
}
html._1qb6bgzz ._1qb6bgz29,
html:not(._1qb6bgzz) ._1qb6bgz28 {
  background: var(--_1e94syb2d);
}
html._1qb6bgzz ._1qb6bgz2b,
html:not(._1qb6bgzz) ._1qb6bgz2a {
  background: var(--_1e94syb2e);
}
html._1qb6bgzz ._1qb6bgz2d,
html:not(._1qb6bgzz) ._1qb6bgz2c {
  background: var(--_1e94syb2f);
}
html._1qb6bgzz ._1qb6bgz2f,
html:not(._1qb6bgzz) ._1qb6bgz2e {
  background: var(--_1e94syb2g);
}
html._1qb6bgzz ._1qb6bgz2h,
html:not(._1qb6bgzz) ._1qb6bgz2g {
  background: var(--_1e94syb2h);
}
html._1qb6bgzz ._1qb6bgz2j,
html:not(._1qb6bgzz) ._1qb6bgz2i {
  background: var(--_1e94syb2i);
}
html._1qb6bgzz ._1qb6bgz2l,
html:not(._1qb6bgzz) ._1qb6bgz2k {
  background: var(--_1e94syb2j);
}
html._1qb6bgzz ._1qb6bgz2n,
html:not(._1qb6bgzz) ._1qb6bgz2m {
  background: var(--_1e94syb2k);
}
html._1qb6bgzz ._1qb6bgz2p,
html:not(._1qb6bgzz) ._1qb6bgz2o {
  background: var(--_1e94syb2l);
}
html._1qb6bgzz ._1qb6bgz2r,
html:not(._1qb6bgzz) ._1qb6bgz2q {
  background: var(--_1e94syb2m);
}
html._1qb6bgzz ._1qb6bgz2t,
html:not(._1qb6bgzz) ._1qb6bgz2s {
  background: var(--_1e94syb2n);
}
html._1qb6bgzz ._1qb6bgz2v,
html:not(._1qb6bgzz) ._1qb6bgz2u {
  background: var(--_1e94syb2o);
}
html._1qb6bgzz ._1qb6bgz2x,
html:not(._1qb6bgzz) ._1qb6bgz2w {
  background: var(--_1e94syb2p);
}
html._1qb6bgzz ._1qb6bgz2z,
html:not(._1qb6bgzz) ._1qb6bgz2y {
  background: var(--_1e94syb2q);
}
html._1qb6bgzz ._1qb6bgz31,
html:not(._1qb6bgzz) ._1qb6bgz30 {
  background: var(--_1e94syb2r);
}
html._1qb6bgzz ._1qb6bgz33,
html:not(._1qb6bgzz) ._1qb6bgz32 {
  background: var(--_1e94syb2s);
}
html._1qb6bgzz ._1qb6bgz35,
html:not(._1qb6bgzz) ._1qb6bgz34 {
  background: var(--_1e94syb2t);
}
html._1qb6bgzz ._1qb6bgz37,
html:not(._1qb6bgzz) ._1qb6bgz36 {
  box-shadow: var(--_1e94syb5i);
}
html._1qb6bgzz ._1qb6bgz39,
html:not(._1qb6bgzz) ._1qb6bgz38 {
  box-shadow: var(--_1e94syb5j);
}
html._1qb6bgzz ._1qb6bgz3b,
html:not(._1qb6bgzz) ._1qb6bgz3a {
  box-shadow: var(--_1e94syb5k);
}
html._1qb6bgzz ._1qb6bgz3d,
html:not(._1qb6bgzz) ._1qb6bgz3c {
  box-shadow: inset 0 0 0 var(--_1e94sybx) var(--_1e94sybd);
}
html._1qb6bgzz ._1qb6bgz3f,
html:not(._1qb6bgzz) ._1qb6bgz3e {
  box-shadow: inset 0 0 0 var(--_1e94sybx) var(--_1e94sybe);
}
html._1qb6bgzz ._1qb6bgz3h,
html:not(._1qb6bgzz) ._1qb6bgz3g {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybf);
}
html._1qb6bgzz ._1qb6bgz3j,
html:not(._1qb6bgzz) ._1qb6bgz3i {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybg);
}
html._1qb6bgzz ._1qb6bgz3l,
html:not(._1qb6bgzz) ._1qb6bgz3k {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybh);
}
html._1qb6bgzz ._1qb6bgz3n,
html:not(._1qb6bgzz) ._1qb6bgz3m {
  box-shadow: inset 0 0 0 var(--_1e94sybx) var(--_1e94sybh);
}
html._1qb6bgzz ._1qb6bgz3p,
html:not(._1qb6bgzz) ._1qb6bgz3o {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybi);
}
html._1qb6bgzz ._1qb6bgz3r,
html:not(._1qb6bgzz) ._1qb6bgz3q {
  box-shadow: inset 0 0 0 var(--_1e94sybx) var(--_1e94sybi);
}
html._1qb6bgzz ._1qb6bgz3t,
html:not(._1qb6bgzz) ._1qb6bgz3s {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybj);
}
html._1qb6bgzz ._1qb6bgz3v,
html:not(._1qb6bgzz) ._1qb6bgz3u {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybl);
}
html._1qb6bgzz ._1qb6bgz3x,
html:not(._1qb6bgzz) ._1qb6bgz3w {
  box-shadow: inset 0 0 0 var(--_1e94sybx) var(--_1e94sybl);
}
html._1qb6bgzz ._1qb6bgz3z,
html:not(._1qb6bgzz) ._1qb6bgz3y {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybm);
}
html._1qb6bgzz ._1qb6bgz41,
html:not(._1qb6bgzz) ._1qb6bgz40 {
  box-shadow: inset 0 0 0 var(--_1e94sybx) var(--_1e94sybm);
}
html._1qb6bgzz ._1qb6bgz43,
html:not(._1qb6bgzz) ._1qb6bgz42 {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybn);
}
html._1qb6bgzz ._1qb6bgz45,
html:not(._1qb6bgzz) ._1qb6bgz44 {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybo);
}
html._1qb6bgzz ._1qb6bgz47,
html:not(._1qb6bgzz) ._1qb6bgz46 {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybp);
}
html._1qb6bgzz ._1qb6bgz49,
html:not(._1qb6bgzz) ._1qb6bgz48 {
  box-shadow: inset 0 0 0 var(--_1e94sybx) var(--_1e94sybp);
}
html._1qb6bgzz ._1qb6bgz4b,
html:not(._1qb6bgzz) ._1qb6bgz4a {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybq);
}
html._1qb6bgzz ._1qb6bgz4d,
html:not(._1qb6bgzz) ._1qb6bgz4c {
  box-shadow: inset 0 0 0 var(--_1e94sybx) var(--_1e94sybq);
}
html._1qb6bgzz ._1qb6bgz4f,
html:not(._1qb6bgzz) ._1qb6bgz4e {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybr);
}
html._1qb6bgzz ._1qb6bgz4h,
html:not(._1qb6bgzz) ._1qb6bgz4g {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybs);
}
html._1qb6bgzz ._1qb6bgz4j,
html:not(._1qb6bgzz) ._1qb6bgz4i {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybt);
}
html._1qb6bgzz ._1qb6bgz4l,
html:not(._1qb6bgzz) ._1qb6bgz4k {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybu);
}
html._1qb6bgzz ._1qb6bgz4n,
html:not(._1qb6bgzz) ._1qb6bgz4m {
  box-shadow: inset 0 0 0 var(--_1e94sybw) var(--_1e94sybv);
}
html._1qb6bgzz ._1qb6bgz4p,
html:not(._1qb6bgzz) ._1qb6bgz4o {
  box-shadow: 0 0 0 var(--_1e94syby) var(--_1e94sybk);
}
._1qb6bgz4q {
  display: none;
}
._1qb6bgz4u {
  display: block;
}
._1qb6bgz4y {
  display: inline;
}
._1qb6bgz52 {
  display: inline-block;
}
._1qb6bgz56 {
  display: flex;
}
._1qb6bgz5a {
  position: relative;
}
._1qb6bgz5e {
  position: absolute;
}
._1qb6bgz5i {
  position: fixed;
}
._1qb6bgz5m {
  border-radius: 0;
}
._1qb6bgz5q {
  border-radius: 9999px;
}
._1qb6bgz5u {
  border-radius: var(--_1e94syba);
}
._1qb6bgz5y {
  border-radius: var(--_1e94sybb);
}
._1qb6bgz62 {
  border-radius: var(--_1e94sybc);
}
._1qb6bgz66 {
  padding-top: var(--_1e94syb0);
}
._1qb6bgz6a {
  padding-top: var(--_1e94syb1);
}
._1qb6bgz6e {
  padding-top: var(--_1e94syb2);
}
._1qb6bgz6i {
  padding-top: var(--_1e94syb3);
}
._1qb6bgz6m {
  padding-top: var(--_1e94syb4);
}
._1qb6bgz6q {
  padding-top: var(--_1e94syb5);
}
._1qb6bgz6u {
  padding-top: var(--_1e94syb6);
}
._1qb6bgz6y {
  padding-top: var(--_1e94syb7);
}
._1qb6bgz72 {
  padding-top: 0;
}
._1qb6bgz76 {
  padding-bottom: var(--_1e94syb0);
}
._1qb6bgz7a {
  padding-bottom: var(--_1e94syb1);
}
._1qb6bgz7e {
  padding-bottom: var(--_1e94syb2);
}
._1qb6bgz7i {
  padding-bottom: var(--_1e94syb3);
}
._1qb6bgz7m {
  padding-bottom: var(--_1e94syb4);
}
._1qb6bgz7q {
  padding-bottom: var(--_1e94syb5);
}
._1qb6bgz7u {
  padding-bottom: var(--_1e94syb6);
}
._1qb6bgz7y {
  padding-bottom: var(--_1e94syb7);
}
._1qb6bgz82 {
  padding-bottom: 0;
}
._1qb6bgz86 {
  padding-right: var(--_1e94syb0);
}
._1qb6bgz8a {
  padding-right: var(--_1e94syb1);
}
._1qb6bgz8e {
  padding-right: var(--_1e94syb2);
}
._1qb6bgz8i {
  padding-right: var(--_1e94syb3);
}
._1qb6bgz8m {
  padding-right: var(--_1e94syb4);
}
._1qb6bgz8q {
  padding-right: var(--_1e94syb5);
}
._1qb6bgz8u {
  padding-right: var(--_1e94syb6);
}
._1qb6bgz8y {
  padding-right: var(--_1e94syb7);
}
._1qb6bgz92 {
  padding-right: 0;
}
._1qb6bgz96 {
  padding-left: var(--_1e94syb0);
}
._1qb6bgz9a {
  padding-left: var(--_1e94syb1);
}
._1qb6bgz9e {
  padding-left: var(--_1e94syb2);
}
._1qb6bgz9i {
  padding-left: var(--_1e94syb3);
}
._1qb6bgz9m {
  padding-left: var(--_1e94syb4);
}
._1qb6bgz9q {
  padding-left: var(--_1e94syb5);
}
._1qb6bgz9u {
  padding-left: var(--_1e94syb6);
}
._1qb6bgz9y {
  padding-left: var(--_1e94syb7);
}
._1qb6bgza2 {
  padding-left: 0;
}
._1qb6bgza6 {
  margin-top: var(--_1e94syb0);
}
._1qb6bgzaa {
  margin-top: var(--_1e94syb1);
}
._1qb6bgzae {
  margin-top: var(--_1e94syb2);
}
._1qb6bgzai {
  margin-top: var(--_1e94syb3);
}
._1qb6bgzam {
  margin-top: var(--_1e94syb4);
}
._1qb6bgzaq {
  margin-top: var(--_1e94syb5);
}
._1qb6bgzau {
  margin-top: var(--_1e94syb6);
}
._1qb6bgzay {
  margin-top: var(--_1e94syb7);
}
._1qb6bgzb2 {
  margin-top: 0;
}
._1qb6bgzb6 {
  margin-bottom: var(--_1e94syb0);
}
._1qb6bgzba {
  margin-bottom: var(--_1e94syb1);
}
._1qb6bgzbe {
  margin-bottom: var(--_1e94syb2);
}
._1qb6bgzbi {
  margin-bottom: var(--_1e94syb3);
}
._1qb6bgzbm {
  margin-bottom: var(--_1e94syb4);
}
._1qb6bgzbq {
  margin-bottom: var(--_1e94syb5);
}
._1qb6bgzbu {
  margin-bottom: var(--_1e94syb6);
}
._1qb6bgzby {
  margin-bottom: var(--_1e94syb7);
}
._1qb6bgzc2 {
  margin-bottom: 0;
}
._1qb6bgzc6 {
  margin-right: var(--_1e94syb0);
}
._1qb6bgzca {
  margin-right: var(--_1e94syb1);
}
._1qb6bgzce {
  margin-right: var(--_1e94syb2);
}
._1qb6bgzci {
  margin-right: var(--_1e94syb3);
}
._1qb6bgzcm {
  margin-right: var(--_1e94syb4);
}
._1qb6bgzcq {
  margin-right: var(--_1e94syb5);
}
._1qb6bgzcu {
  margin-right: var(--_1e94syb6);
}
._1qb6bgzcy {
  margin-right: var(--_1e94syb7);
}
._1qb6bgzd2 {
  margin-right: 0;
}
._1qb6bgzd6 {
  margin-left: var(--_1e94syb0);
}
._1qb6bgzda {
  margin-left: var(--_1e94syb1);
}
._1qb6bgzde {
  margin-left: var(--_1e94syb2);
}
._1qb6bgzdi {
  margin-left: var(--_1e94syb3);
}
._1qb6bgzdm {
  margin-left: var(--_1e94syb4);
}
._1qb6bgzdq {
  margin-left: var(--_1e94syb5);
}
._1qb6bgzdu {
  margin-left: var(--_1e94syb6);
}
._1qb6bgzdy {
  margin-left: var(--_1e94syb7);
}
._1qb6bgze2 {
  margin-left: 0;
}
._1qb6bgze6 {
  align-items: flex-start;
}
._1qb6bgzea {
  align-items: center;
}
._1qb6bgzee {
  align-items: flex-end;
}
._1qb6bgzei {
  justify-content: flex-start;
}
._1qb6bgzem {
  justify-content: center;
}
._1qb6bgzeq {
  justify-content: flex-end;
}
._1qb6bgzeu {
  justify-content: space-between;
}
._1qb6bgzey {
  flex-direction: row;
}
._1qb6bgzf2 {
  flex-direction: row-reverse;
}
._1qb6bgzf6 {
  flex-direction: column;
}
._1qb6bgzfa {
  flex-direction: column-reverse;
}
._1qb6bgzfe {
  flex-wrap: wrap;
}
._1qb6bgzfi {
  flex-wrap: nowrap;
}
._1qb6bgzfm {
  flex-shrink: 0;
}
._1qb6bgzfq {
  flex-grow: 0;
}
._1qb6bgzfu {
  flex-grow: 1;
}
._1qb6bgzfy {
  text-align: left;
}
._1qb6bgzg2 {
  text-align: center;
}
._1qb6bgzg6 {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1qb6bgz4r {
    display: none;
  }
  ._1qb6bgz4v {
    display: block;
  }
  ._1qb6bgz4z {
    display: inline;
  }
  ._1qb6bgz53 {
    display: inline-block;
  }
  ._1qb6bgz57 {
    display: flex;
  }
  ._1qb6bgz5b {
    position: relative;
  }
  ._1qb6bgz5f {
    position: absolute;
  }
  ._1qb6bgz5j {
    position: fixed;
  }
  ._1qb6bgz5n {
    border-radius: 0;
  }
  ._1qb6bgz5r {
    border-radius: 9999px;
  }
  ._1qb6bgz5v {
    border-radius: var(--_1e94syba);
  }
  ._1qb6bgz5z {
    border-radius: var(--_1e94sybb);
  }
  ._1qb6bgz63 {
    border-radius: var(--_1e94sybc);
  }
  ._1qb6bgz67 {
    padding-top: var(--_1e94syb0);
  }
  ._1qb6bgz6b {
    padding-top: var(--_1e94syb1);
  }
  ._1qb6bgz6f {
    padding-top: var(--_1e94syb2);
  }
  ._1qb6bgz6j {
    padding-top: var(--_1e94syb3);
  }
  ._1qb6bgz6n {
    padding-top: var(--_1e94syb4);
  }
  ._1qb6bgz6r {
    padding-top: var(--_1e94syb5);
  }
  ._1qb6bgz6v {
    padding-top: var(--_1e94syb6);
  }
  ._1qb6bgz6z {
    padding-top: var(--_1e94syb7);
  }
  ._1qb6bgz73 {
    padding-top: 0;
  }
  ._1qb6bgz77 {
    padding-bottom: var(--_1e94syb0);
  }
  ._1qb6bgz7b {
    padding-bottom: var(--_1e94syb1);
  }
  ._1qb6bgz7f {
    padding-bottom: var(--_1e94syb2);
  }
  ._1qb6bgz7j {
    padding-bottom: var(--_1e94syb3);
  }
  ._1qb6bgz7n {
    padding-bottom: var(--_1e94syb4);
  }
  ._1qb6bgz7r {
    padding-bottom: var(--_1e94syb5);
  }
  ._1qb6bgz7v {
    padding-bottom: var(--_1e94syb6);
  }
  ._1qb6bgz7z {
    padding-bottom: var(--_1e94syb7);
  }
  ._1qb6bgz83 {
    padding-bottom: 0;
  }
  ._1qb6bgz87 {
    padding-right: var(--_1e94syb0);
  }
  ._1qb6bgz8b {
    padding-right: var(--_1e94syb1);
  }
  ._1qb6bgz8f {
    padding-right: var(--_1e94syb2);
  }
  ._1qb6bgz8j {
    padding-right: var(--_1e94syb3);
  }
  ._1qb6bgz8n {
    padding-right: var(--_1e94syb4);
  }
  ._1qb6bgz8r {
    padding-right: var(--_1e94syb5);
  }
  ._1qb6bgz8v {
    padding-right: var(--_1e94syb6);
  }
  ._1qb6bgz8z {
    padding-right: var(--_1e94syb7);
  }
  ._1qb6bgz93 {
    padding-right: 0;
  }
  ._1qb6bgz97 {
    padding-left: var(--_1e94syb0);
  }
  ._1qb6bgz9b {
    padding-left: var(--_1e94syb1);
  }
  ._1qb6bgz9f {
    padding-left: var(--_1e94syb2);
  }
  ._1qb6bgz9j {
    padding-left: var(--_1e94syb3);
  }
  ._1qb6bgz9n {
    padding-left: var(--_1e94syb4);
  }
  ._1qb6bgz9r {
    padding-left: var(--_1e94syb5);
  }
  ._1qb6bgz9v {
    padding-left: var(--_1e94syb6);
  }
  ._1qb6bgz9z {
    padding-left: var(--_1e94syb7);
  }
  ._1qb6bgza3 {
    padding-left: 0;
  }
  ._1qb6bgza7 {
    margin-top: var(--_1e94syb0);
  }
  ._1qb6bgzab {
    margin-top: var(--_1e94syb1);
  }
  ._1qb6bgzaf {
    margin-top: var(--_1e94syb2);
  }
  ._1qb6bgzaj {
    margin-top: var(--_1e94syb3);
  }
  ._1qb6bgzan {
    margin-top: var(--_1e94syb4);
  }
  ._1qb6bgzar {
    margin-top: var(--_1e94syb5);
  }
  ._1qb6bgzav {
    margin-top: var(--_1e94syb6);
  }
  ._1qb6bgzaz {
    margin-top: var(--_1e94syb7);
  }
  ._1qb6bgzb3 {
    margin-top: 0;
  }
  ._1qb6bgzb7 {
    margin-bottom: var(--_1e94syb0);
  }
  ._1qb6bgzbb {
    margin-bottom: var(--_1e94syb1);
  }
  ._1qb6bgzbf {
    margin-bottom: var(--_1e94syb2);
  }
  ._1qb6bgzbj {
    margin-bottom: var(--_1e94syb3);
  }
  ._1qb6bgzbn {
    margin-bottom: var(--_1e94syb4);
  }
  ._1qb6bgzbr {
    margin-bottom: var(--_1e94syb5);
  }
  ._1qb6bgzbv {
    margin-bottom: var(--_1e94syb6);
  }
  ._1qb6bgzbz {
    margin-bottom: var(--_1e94syb7);
  }
  ._1qb6bgzc3 {
    margin-bottom: 0;
  }
  ._1qb6bgzc7 {
    margin-right: var(--_1e94syb0);
  }
  ._1qb6bgzcb {
    margin-right: var(--_1e94syb1);
  }
  ._1qb6bgzcf {
    margin-right: var(--_1e94syb2);
  }
  ._1qb6bgzcj {
    margin-right: var(--_1e94syb3);
  }
  ._1qb6bgzcn {
    margin-right: var(--_1e94syb4);
  }
  ._1qb6bgzcr {
    margin-right: var(--_1e94syb5);
  }
  ._1qb6bgzcv {
    margin-right: var(--_1e94syb6);
  }
  ._1qb6bgzcz {
    margin-right: var(--_1e94syb7);
  }
  ._1qb6bgzd3 {
    margin-right: 0;
  }
  ._1qb6bgzd7 {
    margin-left: var(--_1e94syb0);
  }
  ._1qb6bgzdb {
    margin-left: var(--_1e94syb1);
  }
  ._1qb6bgzdf {
    margin-left: var(--_1e94syb2);
  }
  ._1qb6bgzdj {
    margin-left: var(--_1e94syb3);
  }
  ._1qb6bgzdn {
    margin-left: var(--_1e94syb4);
  }
  ._1qb6bgzdr {
    margin-left: var(--_1e94syb5);
  }
  ._1qb6bgzdv {
    margin-left: var(--_1e94syb6);
  }
  ._1qb6bgzdz {
    margin-left: var(--_1e94syb7);
  }
  ._1qb6bgze3 {
    margin-left: 0;
  }
  ._1qb6bgze7 {
    align-items: flex-start;
  }
  ._1qb6bgzeb {
    align-items: center;
  }
  ._1qb6bgzef {
    align-items: flex-end;
  }
  ._1qb6bgzej {
    justify-content: flex-start;
  }
  ._1qb6bgzen {
    justify-content: center;
  }
  ._1qb6bgzer {
    justify-content: flex-end;
  }
  ._1qb6bgzev {
    justify-content: space-between;
  }
  ._1qb6bgzez {
    flex-direction: row;
  }
  ._1qb6bgzf3 {
    flex-direction: row-reverse;
  }
  ._1qb6bgzf7 {
    flex-direction: column;
  }
  ._1qb6bgzfb {
    flex-direction: column-reverse;
  }
  ._1qb6bgzff {
    flex-wrap: wrap;
  }
  ._1qb6bgzfj {
    flex-wrap: nowrap;
  }
  ._1qb6bgzfn {
    flex-shrink: 0;
  }
  ._1qb6bgzfr {
    flex-grow: 0;
  }
  ._1qb6bgzfv {
    flex-grow: 1;
  }
  ._1qb6bgzfz {
    text-align: left;
  }
  ._1qb6bgzg3 {
    text-align: center;
  }
  ._1qb6bgzg7 {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1qb6bgz4s {
    display: none;
  }
  ._1qb6bgz4w {
    display: block;
  }
  ._1qb6bgz50 {
    display: inline;
  }
  ._1qb6bgz54 {
    display: inline-block;
  }
  ._1qb6bgz58 {
    display: flex;
  }
  ._1qb6bgz5c {
    position: relative;
  }
  ._1qb6bgz5g {
    position: absolute;
  }
  ._1qb6bgz5k {
    position: fixed;
  }
  ._1qb6bgz5o {
    border-radius: 0;
  }
  ._1qb6bgz5s {
    border-radius: 9999px;
  }
  ._1qb6bgz5w {
    border-radius: var(--_1e94syba);
  }
  ._1qb6bgz60 {
    border-radius: var(--_1e94sybb);
  }
  ._1qb6bgz64 {
    border-radius: var(--_1e94sybc);
  }
  ._1qb6bgz68 {
    padding-top: var(--_1e94syb0);
  }
  ._1qb6bgz6c {
    padding-top: var(--_1e94syb1);
  }
  ._1qb6bgz6g {
    padding-top: var(--_1e94syb2);
  }
  ._1qb6bgz6k {
    padding-top: var(--_1e94syb3);
  }
  ._1qb6bgz6o {
    padding-top: var(--_1e94syb4);
  }
  ._1qb6bgz6s {
    padding-top: var(--_1e94syb5);
  }
  ._1qb6bgz6w {
    padding-top: var(--_1e94syb6);
  }
  ._1qb6bgz70 {
    padding-top: var(--_1e94syb7);
  }
  ._1qb6bgz74 {
    padding-top: 0;
  }
  ._1qb6bgz78 {
    padding-bottom: var(--_1e94syb0);
  }
  ._1qb6bgz7c {
    padding-bottom: var(--_1e94syb1);
  }
  ._1qb6bgz7g {
    padding-bottom: var(--_1e94syb2);
  }
  ._1qb6bgz7k {
    padding-bottom: var(--_1e94syb3);
  }
  ._1qb6bgz7o {
    padding-bottom: var(--_1e94syb4);
  }
  ._1qb6bgz7s {
    padding-bottom: var(--_1e94syb5);
  }
  ._1qb6bgz7w {
    padding-bottom: var(--_1e94syb6);
  }
  ._1qb6bgz80 {
    padding-bottom: var(--_1e94syb7);
  }
  ._1qb6bgz84 {
    padding-bottom: 0;
  }
  ._1qb6bgz88 {
    padding-right: var(--_1e94syb0);
  }
  ._1qb6bgz8c {
    padding-right: var(--_1e94syb1);
  }
  ._1qb6bgz8g {
    padding-right: var(--_1e94syb2);
  }
  ._1qb6bgz8k {
    padding-right: var(--_1e94syb3);
  }
  ._1qb6bgz8o {
    padding-right: var(--_1e94syb4);
  }
  ._1qb6bgz8s {
    padding-right: var(--_1e94syb5);
  }
  ._1qb6bgz8w {
    padding-right: var(--_1e94syb6);
  }
  ._1qb6bgz90 {
    padding-right: var(--_1e94syb7);
  }
  ._1qb6bgz94 {
    padding-right: 0;
  }
  ._1qb6bgz98 {
    padding-left: var(--_1e94syb0);
  }
  ._1qb6bgz9c {
    padding-left: var(--_1e94syb1);
  }
  ._1qb6bgz9g {
    padding-left: var(--_1e94syb2);
  }
  ._1qb6bgz9k {
    padding-left: var(--_1e94syb3);
  }
  ._1qb6bgz9o {
    padding-left: var(--_1e94syb4);
  }
  ._1qb6bgz9s {
    padding-left: var(--_1e94syb5);
  }
  ._1qb6bgz9w {
    padding-left: var(--_1e94syb6);
  }
  ._1qb6bgza0 {
    padding-left: var(--_1e94syb7);
  }
  ._1qb6bgza4 {
    padding-left: 0;
  }
  ._1qb6bgza8 {
    margin-top: var(--_1e94syb0);
  }
  ._1qb6bgzac {
    margin-top: var(--_1e94syb1);
  }
  ._1qb6bgzag {
    margin-top: var(--_1e94syb2);
  }
  ._1qb6bgzak {
    margin-top: var(--_1e94syb3);
  }
  ._1qb6bgzao {
    margin-top: var(--_1e94syb4);
  }
  ._1qb6bgzas {
    margin-top: var(--_1e94syb5);
  }
  ._1qb6bgzaw {
    margin-top: var(--_1e94syb6);
  }
  ._1qb6bgzb0 {
    margin-top: var(--_1e94syb7);
  }
  ._1qb6bgzb4 {
    margin-top: 0;
  }
  ._1qb6bgzb8 {
    margin-bottom: var(--_1e94syb0);
  }
  ._1qb6bgzbc {
    margin-bottom: var(--_1e94syb1);
  }
  ._1qb6bgzbg {
    margin-bottom: var(--_1e94syb2);
  }
  ._1qb6bgzbk {
    margin-bottom: var(--_1e94syb3);
  }
  ._1qb6bgzbo {
    margin-bottom: var(--_1e94syb4);
  }
  ._1qb6bgzbs {
    margin-bottom: var(--_1e94syb5);
  }
  ._1qb6bgzbw {
    margin-bottom: var(--_1e94syb6);
  }
  ._1qb6bgzc0 {
    margin-bottom: var(--_1e94syb7);
  }
  ._1qb6bgzc4 {
    margin-bottom: 0;
  }
  ._1qb6bgzc8 {
    margin-right: var(--_1e94syb0);
  }
  ._1qb6bgzcc {
    margin-right: var(--_1e94syb1);
  }
  ._1qb6bgzcg {
    margin-right: var(--_1e94syb2);
  }
  ._1qb6bgzck {
    margin-right: var(--_1e94syb3);
  }
  ._1qb6bgzco {
    margin-right: var(--_1e94syb4);
  }
  ._1qb6bgzcs {
    margin-right: var(--_1e94syb5);
  }
  ._1qb6bgzcw {
    margin-right: var(--_1e94syb6);
  }
  ._1qb6bgzd0 {
    margin-right: var(--_1e94syb7);
  }
  ._1qb6bgzd4 {
    margin-right: 0;
  }
  ._1qb6bgzd8 {
    margin-left: var(--_1e94syb0);
  }
  ._1qb6bgzdc {
    margin-left: var(--_1e94syb1);
  }
  ._1qb6bgzdg {
    margin-left: var(--_1e94syb2);
  }
  ._1qb6bgzdk {
    margin-left: var(--_1e94syb3);
  }
  ._1qb6bgzdo {
    margin-left: var(--_1e94syb4);
  }
  ._1qb6bgzds {
    margin-left: var(--_1e94syb5);
  }
  ._1qb6bgzdw {
    margin-left: var(--_1e94syb6);
  }
  ._1qb6bgze0 {
    margin-left: var(--_1e94syb7);
  }
  ._1qb6bgze4 {
    margin-left: 0;
  }
  ._1qb6bgze8 {
    align-items: flex-start;
  }
  ._1qb6bgzec {
    align-items: center;
  }
  ._1qb6bgzeg {
    align-items: flex-end;
  }
  ._1qb6bgzek {
    justify-content: flex-start;
  }
  ._1qb6bgzeo {
    justify-content: center;
  }
  ._1qb6bgzes {
    justify-content: flex-end;
  }
  ._1qb6bgzew {
    justify-content: space-between;
  }
  ._1qb6bgzf0 {
    flex-direction: row;
  }
  ._1qb6bgzf4 {
    flex-direction: row-reverse;
  }
  ._1qb6bgzf8 {
    flex-direction: column;
  }
  ._1qb6bgzfc {
    flex-direction: column-reverse;
  }
  ._1qb6bgzfg {
    flex-wrap: wrap;
  }
  ._1qb6bgzfk {
    flex-wrap: nowrap;
  }
  ._1qb6bgzfo {
    flex-shrink: 0;
  }
  ._1qb6bgzfs {
    flex-grow: 0;
  }
  ._1qb6bgzfw {
    flex-grow: 1;
  }
  ._1qb6bgzg0 {
    text-align: left;
  }
  ._1qb6bgzg4 {
    text-align: center;
  }
  ._1qb6bgzg8 {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1qb6bgz4t {
    display: none;
  }
  ._1qb6bgz4x {
    display: block;
  }
  ._1qb6bgz51 {
    display: inline;
  }
  ._1qb6bgz55 {
    display: inline-block;
  }
  ._1qb6bgz59 {
    display: flex;
  }
  ._1qb6bgz5d {
    position: relative;
  }
  ._1qb6bgz5h {
    position: absolute;
  }
  ._1qb6bgz5l {
    position: fixed;
  }
  ._1qb6bgz5p {
    border-radius: 0;
  }
  ._1qb6bgz5t {
    border-radius: 9999px;
  }
  ._1qb6bgz5x {
    border-radius: var(--_1e94syba);
  }
  ._1qb6bgz61 {
    border-radius: var(--_1e94sybb);
  }
  ._1qb6bgz65 {
    border-radius: var(--_1e94sybc);
  }
  ._1qb6bgz69 {
    padding-top: var(--_1e94syb0);
  }
  ._1qb6bgz6d {
    padding-top: var(--_1e94syb1);
  }
  ._1qb6bgz6h {
    padding-top: var(--_1e94syb2);
  }
  ._1qb6bgz6l {
    padding-top: var(--_1e94syb3);
  }
  ._1qb6bgz6p {
    padding-top: var(--_1e94syb4);
  }
  ._1qb6bgz6t {
    padding-top: var(--_1e94syb5);
  }
  ._1qb6bgz6x {
    padding-top: var(--_1e94syb6);
  }
  ._1qb6bgz71 {
    padding-top: var(--_1e94syb7);
  }
  ._1qb6bgz75 {
    padding-top: 0;
  }
  ._1qb6bgz79 {
    padding-bottom: var(--_1e94syb0);
  }
  ._1qb6bgz7d {
    padding-bottom: var(--_1e94syb1);
  }
  ._1qb6bgz7h {
    padding-bottom: var(--_1e94syb2);
  }
  ._1qb6bgz7l {
    padding-bottom: var(--_1e94syb3);
  }
  ._1qb6bgz7p {
    padding-bottom: var(--_1e94syb4);
  }
  ._1qb6bgz7t {
    padding-bottom: var(--_1e94syb5);
  }
  ._1qb6bgz7x {
    padding-bottom: var(--_1e94syb6);
  }
  ._1qb6bgz81 {
    padding-bottom: var(--_1e94syb7);
  }
  ._1qb6bgz85 {
    padding-bottom: 0;
  }
  ._1qb6bgz89 {
    padding-right: var(--_1e94syb0);
  }
  ._1qb6bgz8d {
    padding-right: var(--_1e94syb1);
  }
  ._1qb6bgz8h {
    padding-right: var(--_1e94syb2);
  }
  ._1qb6bgz8l {
    padding-right: var(--_1e94syb3);
  }
  ._1qb6bgz8p {
    padding-right: var(--_1e94syb4);
  }
  ._1qb6bgz8t {
    padding-right: var(--_1e94syb5);
  }
  ._1qb6bgz8x {
    padding-right: var(--_1e94syb6);
  }
  ._1qb6bgz91 {
    padding-right: var(--_1e94syb7);
  }
  ._1qb6bgz95 {
    padding-right: 0;
  }
  ._1qb6bgz99 {
    padding-left: var(--_1e94syb0);
  }
  ._1qb6bgz9d {
    padding-left: var(--_1e94syb1);
  }
  ._1qb6bgz9h {
    padding-left: var(--_1e94syb2);
  }
  ._1qb6bgz9l {
    padding-left: var(--_1e94syb3);
  }
  ._1qb6bgz9p {
    padding-left: var(--_1e94syb4);
  }
  ._1qb6bgz9t {
    padding-left: var(--_1e94syb5);
  }
  ._1qb6bgz9x {
    padding-left: var(--_1e94syb6);
  }
  ._1qb6bgza1 {
    padding-left: var(--_1e94syb7);
  }
  ._1qb6bgza5 {
    padding-left: 0;
  }
  ._1qb6bgza9 {
    margin-top: var(--_1e94syb0);
  }
  ._1qb6bgzad {
    margin-top: var(--_1e94syb1);
  }
  ._1qb6bgzah {
    margin-top: var(--_1e94syb2);
  }
  ._1qb6bgzal {
    margin-top: var(--_1e94syb3);
  }
  ._1qb6bgzap {
    margin-top: var(--_1e94syb4);
  }
  ._1qb6bgzat {
    margin-top: var(--_1e94syb5);
  }
  ._1qb6bgzax {
    margin-top: var(--_1e94syb6);
  }
  ._1qb6bgzb1 {
    margin-top: var(--_1e94syb7);
  }
  ._1qb6bgzb5 {
    margin-top: 0;
  }
  ._1qb6bgzb9 {
    margin-bottom: var(--_1e94syb0);
  }
  ._1qb6bgzbd {
    margin-bottom: var(--_1e94syb1);
  }
  ._1qb6bgzbh {
    margin-bottom: var(--_1e94syb2);
  }
  ._1qb6bgzbl {
    margin-bottom: var(--_1e94syb3);
  }
  ._1qb6bgzbp {
    margin-bottom: var(--_1e94syb4);
  }
  ._1qb6bgzbt {
    margin-bottom: var(--_1e94syb5);
  }
  ._1qb6bgzbx {
    margin-bottom: var(--_1e94syb6);
  }
  ._1qb6bgzc1 {
    margin-bottom: var(--_1e94syb7);
  }
  ._1qb6bgzc5 {
    margin-bottom: 0;
  }
  ._1qb6bgzc9 {
    margin-right: var(--_1e94syb0);
  }
  ._1qb6bgzcd {
    margin-right: var(--_1e94syb1);
  }
  ._1qb6bgzch {
    margin-right: var(--_1e94syb2);
  }
  ._1qb6bgzcl {
    margin-right: var(--_1e94syb3);
  }
  ._1qb6bgzcp {
    margin-right: var(--_1e94syb4);
  }
  ._1qb6bgzct {
    margin-right: var(--_1e94syb5);
  }
  ._1qb6bgzcx {
    margin-right: var(--_1e94syb6);
  }
  ._1qb6bgzd1 {
    margin-right: var(--_1e94syb7);
  }
  ._1qb6bgzd5 {
    margin-right: 0;
  }
  ._1qb6bgzd9 {
    margin-left: var(--_1e94syb0);
  }
  ._1qb6bgzdd {
    margin-left: var(--_1e94syb1);
  }
  ._1qb6bgzdh {
    margin-left: var(--_1e94syb2);
  }
  ._1qb6bgzdl {
    margin-left: var(--_1e94syb3);
  }
  ._1qb6bgzdp {
    margin-left: var(--_1e94syb4);
  }
  ._1qb6bgzdt {
    margin-left: var(--_1e94syb5);
  }
  ._1qb6bgzdx {
    margin-left: var(--_1e94syb6);
  }
  ._1qb6bgze1 {
    margin-left: var(--_1e94syb7);
  }
  ._1qb6bgze5 {
    margin-left: 0;
  }
  ._1qb6bgze9 {
    align-items: flex-start;
  }
  ._1qb6bgzed {
    align-items: center;
  }
  ._1qb6bgzeh {
    align-items: flex-end;
  }
  ._1qb6bgzel {
    justify-content: flex-start;
  }
  ._1qb6bgzep {
    justify-content: center;
  }
  ._1qb6bgzet {
    justify-content: flex-end;
  }
  ._1qb6bgzex {
    justify-content: space-between;
  }
  ._1qb6bgzf1 {
    flex-direction: row;
  }
  ._1qb6bgzf5 {
    flex-direction: row-reverse;
  }
  ._1qb6bgzf9 {
    flex-direction: column;
  }
  ._1qb6bgzfd {
    flex-direction: column-reverse;
  }
  ._1qb6bgzfh {
    flex-wrap: wrap;
  }
  ._1qb6bgzfl {
    flex-wrap: nowrap;
  }
  ._1qb6bgzfp {
    flex-shrink: 0;
  }
  ._1qb6bgzft {
    flex-grow: 0;
  }
  ._1qb6bgzfx {
    flex-grow: 1;
  }
  ._1qb6bgzg1 {
    text-align: left;
  }
  ._1qb6bgzg5 {
    text-align: center;
  }
  ._1qb6bgzg9 {
    text-align: right;
  }
}
._1wfao5x0 {
  --_1e94syb0: 24px;
  --_1e94syb1: 4px;
  --_1e94syb2: 8px;
  --_1e94syb3: 12px;
  --_1e94syb4: 20px;
  --_1e94syb5: 32px;
  --_1e94syb6: 48px;
  --_1e94syb7: 96px;
  --_1e94syb8: 44px;
  --_1e94syb9: 4px;
  --_1e94syba: 4px;
  --_1e94sybb: 6px;
  --_1e94sybc: 10px;
  --_1e94sybd: #e60278;
  --_1e94sybe: #f8b1dc;
  --_1e94sybf: #fdc221;
  --_1e94sybg: #fee384;
  --_1e94sybh: #b91e1e;
  --_1e94sybi: #fb999a;
  --_1e94sybj: #838fa5;
  --_1e94sybk: rgba(159, 176, 245, 0.7);
  --_1e94sybl: #4964e9;
  --_1e94sybm: #9fb0f5;
  --_1e94sybn: #1d559d;
  --_1e94sybo: #98c9f1;
  --_1e94sybp: #2e3849;
  --_1e94sybr: #d2d7df;
  --_1e94sybq: #fff;
  --_1e94sybs: #12784f;
  --_1e94sybt: #8bdec5;
  --_1e94sybu: #512eaa;
  --_1e94sybv: #c6acf5;
  --_1e94sybw: 1px;
  --_1e94sybx: 2px;
  --_1e94syby: 3px;
  --_1e94sybz: 400px;
  --_1e94syb10: 660px;
  --_1e94syb11: 940px;
  --_1e94syb12: 1280px;
  --_1e94syb13: #e60278;
  --_1e94syb14: #f8b1dc;
  --_1e94syb15: #723d02;
  --_1e94syb16: #fee384;
  --_1e94syb17: #b91e1e;
  --_1e94syb18: #fb999a;
  --_1e94syb19: #4964e9;
  --_1e94syb1a: #9fb0f5;
  --_1e94syb1b: #1d559d;
  --_1e94syb1c: #98c9f1;
  --_1e94syb1d: #4964e9;
  --_1e94syb1f: #9fb0f5;
  --_1e94syb1e: #4964e9;
  --_1e94syb1g: #512eaa;
  --_1e94syb1h: #c6acf5;
  --_1e94syb1i: #2e3849;
  --_1e94syb1j: #fff;
  --_1e94syb1k: #12784f;
  --_1e94syb1l: #8bdec5;
  --_1e94syb1m: #512eaa;
  --_1e94syb1n: #c6acf5;
  --_1e94syb1o: #f57c00;
  --_1e94syb1p: #5a6881;
  --_1e94syb1q: hsla(0, 0%, 100%, 0.65);
  --_1e94syb1r: #f7f8fb;
  --_1e94syb1s: #0e131b;
  --_1e94syb1t: #0d3880;
  --_1e94syb1u: #e60278;
  --_1e94syb1v: #cd026b;
  --_1e94syb1w: #fd0585;
  --_1e94syb1x: #feeffa;
  --_1e94syb1y: #fdd7f3;
  --_1e94syb1z: #fde3f6;
  --_1e94syb20: #fdc221;
  --_1e94syb21: #fef8de;
  --_1e94syb22: #b91e1e;
  --_1e94syb23: #a31a1a;
  --_1e94syb24: #db1616;
  --_1e94syb25: #ffe3e2;
  --_1e94syb26: #fef3f3;
  --_1e94syb27: #fcdbdb;
  --_1e94syb28: #fde7e7;
  --_1e94syb29: #4964e9;
  --_1e94syb2a: #3251e6;
  --_1e94syb2b: #5975ff;
  --_1e94syb2c: #f4f6fe;
  --_1e94syb2d: #dde3fc;
  --_1e94syb2e: #e8ecfd;
  --_1e94syb2f: #1d559d;
  --_1e94syb2g: #e3f2fb;
  --_1e94syb2h: #2e3849;
  --_1e94syb2i: #242c39;
  --_1e94syb2j: #384459;
  --_1e94syb2k: #eaecf1;
  --_1e94syb2l: #f7f8fb;
  --_1e94syb2m: #e6e9f3;
  --_1e94syb2n: #eff1f7;
  --_1e94syb2o: #12784f;
  --_1e94syb2p: #e2f7f1;
  --_1e94syb2q: #512eaa;
  --_1e94syb2r: #f1e8fd;
  --_1e94syb2s: #fff;
  --_1e94syb2t: #1c2330;
  --_1e94syb2u: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --_1e94syb2v: 1456;
  --_1e94syb2w: 1900;
  --_1e94syb2x: -500;
  --_1e94syb2y: 0;
  --_1e94syb2z: 2048;
  --_1e94syb30: 12px;
  --_1e94syb31: 20px;
  --_1e94syb32: 8.5313px;
  --_1e94syb33: -0.4642em;
  --_1e94syb34: -0.4915em;
  --_1e94syb35: 12px;
  --_1e94syb36: 20px;
  --_1e94syb37: 8.5313px;
  --_1e94syb38: -0.4642em;
  --_1e94syb39: -0.4915em;
  --_1e94syb3a: 14px;
  --_1e94syb3b: 20px;
  --_1e94syb3c: 9.9531px;
  --_1e94syb3d: -0.3451em;
  --_1e94syb3e: -0.3725em;
  --_1e94syb3f: 14px;
  --_1e94syb3g: 20px;
  --_1e94syb3h: 9.9531px;
  --_1e94syb3i: -0.3451em;
  --_1e94syb3j: -0.3725em;
  --_1e94syb3k: 16px;
  --_1e94syb3l: 24px;
  --_1e94syb3m: 11.375px;
  --_1e94syb3n: -0.3809em;
  --_1e94syb3o: -0.4082em;
  --_1e94syb3p: 16px;
  --_1e94syb3q: 24px;
  --_1e94syb3r: 11.375px;
  --_1e94syb3s: -0.3809em;
  --_1e94syb3t: -0.4082em;
  --_1e94syb3u: 18px;
  --_1e94syb3v: 28px;
  --_1e94syb3w: 12.7969px;
  --_1e94syb3x: -0.4086em;
  --_1e94syb3y: -0.436em;
  --_1e94syb3z: 18px;
  --_1e94syb40: 28px;
  --_1e94syb41: 12.7969px;
  --_1e94syb42: -0.4086em;
  --_1e94syb43: -0.436em;
  --_1e94syb44: 400;
  --_1e94syb45: 500;
  --_1e94syb46: 700;
  --_1e94syb47: 28px;
  --_1e94syb48: 36px;
  --_1e94syb49: 19.9063px;
  --_1e94syb4a: -0.2737em;
  --_1e94syb4b: -0.3011em;
  --_1e94syb4c: 42px;
  --_1e94syb4d: 44px;
  --_1e94syb4e: 29.8594px;
  --_1e94syb4f: -0.1547em;
  --_1e94syb4g: -0.182em;
  --_1e94syb4h: 21px;
  --_1e94syb4i: 32px;
  --_1e94syb4j: 14.9297px;
  --_1e94syb4k: -0.3928em;
  --_1e94syb4l: -0.4201em;
  --_1e94syb4m: 28px;
  --_1e94syb4n: 36px;
  --_1e94syb4o: 19.9063px;
  --_1e94syb4p: -0.2737em;
  --_1e94syb4q: -0.3011em;
  --_1e94syb4r: 21px;
  --_1e94syb4s: 28px;
  --_1e94syb4t: 14.9297px;
  --_1e94syb4u: -0.2975em;
  --_1e94syb4v: -0.3249em;
  --_1e94syb4w: 21px;
  --_1e94syb4x: 28px;
  --_1e94syb4y: 14.9297px;
  --_1e94syb4z: -0.2975em;
  --_1e94syb50: -0.3249em;
  --_1e94syb51: 18px;
  --_1e94syb52: 28px;
  --_1e94syb53: 12.7969px;
  --_1e94syb54: -0.4086em;
  --_1e94syb55: -0.436em;
  --_1e94syb56: 18px;
  --_1e94syb57: 28px;
  --_1e94syb58: 12.7969px;
  --_1e94syb59: -0.4086em;
  --_1e94syb5a: -0.436em;
  --_1e94syb5b: 400;
  --_1e94syb5c: 500;
  --_1e94syb5d: 24px;
  --_1e94syb5e: 20px;
  --_1e94syb5f: transform 0.125s ease, opacity 0.125s ease;
  --_1e94syb5g: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1e94syb5h: scale(0.95);
  --_1e94syb5i: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_1e94syb5j: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_1e94syb5k: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.kt6im00 {
  font-family: var(--_1e94syb2u);
}
.kt6im01 {
  font-weight: var(--_1e94syb44);
}
.kt6im02 {
  font-weight: var(--_1e94syb45);
}
.kt6im03 {
  font-weight: var(--_1e94syb46);
}
.kt6im04 {
  --_1d0g9qk0: var(--_1e94syb30);
  --_1d0g9qk1: var(--_1e94syb31);
  --_1d0g9qk2: var(--_1e94syb33);
  --_1d0g9qk3: var(--_1e94syb34);
}
.kt6im07 {
  --_1d0g9qk0: var(--_1e94syb3a);
  --_1d0g9qk1: var(--_1e94syb3b);
  --_1d0g9qk2: var(--_1e94syb3d);
  --_1d0g9qk3: var(--_1e94syb3e);
}
.kt6im0a {
  --_1d0g9qk0: var(--_1e94syb3k);
  --_1d0g9qk1: var(--_1e94syb3l);
  --_1d0g9qk2: var(--_1e94syb3n);
  --_1d0g9qk3: var(--_1e94syb3o);
}
.kt6im0d {
  --_1d0g9qk0: var(--_1e94syb3u);
  --_1d0g9qk1: var(--_1e94syb3v);
  --_1d0g9qk2: var(--_1e94syb3x);
  --_1d0g9qk3: var(--_1e94syb3y);
}
.kt6im0g {
  font-size: var(--_1e94syb30);
  line-height: var(--_1e94syb31);
}
.kt6im0h {
  font-size: var(--_1e94syb3a);
  line-height: var(--_1e94syb3b);
}
.kt6im0i {
  font-size: var(--_1e94syb3k);
  line-height: var(--_1e94syb3l);
}
.kt6im0j {
  font-size: var(--_1e94syb3u);
  line-height: var(--_1e94syb3v);
}
.kt6im0k {
  font-weight: var(--_1e94syb5b);
}
.kt6im0l {
  font-weight: var(--_1e94syb5c);
}
.kt6im0m {
  --_1d0g9qk0: var(--_1e94syb47);
  --_1d0g9qk1: var(--_1e94syb48);
  --_1d0g9qk2: var(--_1e94syb4a);
  --_1d0g9qk3: var(--_1e94syb4b);
}
.kt6im0p {
  --_1d0g9qk0: var(--_1e94syb4h);
  --_1d0g9qk1: var(--_1e94syb4i);
  --_1d0g9qk2: var(--_1e94syb4k);
  --_1d0g9qk3: var(--_1e94syb4l);
}
.kt6im0s {
  --_1d0g9qk0: var(--_1e94syb4r);
  --_1d0g9qk1: var(--_1e94syb4s);
  --_1d0g9qk2: var(--_1e94syb4u);
  --_1d0g9qk3: var(--_1e94syb4v);
}
.kt6im0v {
  --_1d0g9qk0: var(--_1e94syb51);
  --_1d0g9qk1: var(--_1e94syb52);
  --_1d0g9qk2: var(--_1e94syb54);
  --_1d0g9qk3: var(--_1e94syb55);
}
html:not(._1qb6bgzz) .kt6im018 {
  --kt6im0y: var(--_1e94syb17);
  --kt6im0z: var(--_1e94syb15);
  --kt6im010: var(--_1e94syb1b);
  --kt6im011: var(--_1e94syb1m);
  --kt6im012: var(--_1e94syb1k);
  --kt6im013: var(--_1e94syb13);
  --kt6im014: var(--_1e94syb19);
  --kt6im015: var(--_1e94syb1i);
  --kt6im016: var(--_1e94syb1p);
  --kt6im017: var(--_1e94syb1d);
}
html:not(._1qb6bgzz) .kt6im019 {
  --kt6im0y: var(--_1e94syb18);
  --kt6im0z: var(--_1e94syb16);
  --kt6im010: var(--_1e94syb1c);
  --kt6im011: var(--_1e94syb1n);
  --kt6im012: var(--_1e94syb1l);
  --kt6im013: var(--_1e94syb14);
  --kt6im014: var(--_1e94syb1a);
  --kt6im015: var(--_1e94syb1j);
  --kt6im016: var(--_1e94syb1q);
  --kt6im017: var(--_1e94syb1f);
}
html._1qb6bgzz .kt6im01a {
  --kt6im0y: var(--_1e94syb17);
  --kt6im0z: var(--_1e94syb15);
  --kt6im010: var(--_1e94syb1b);
  --kt6im011: var(--_1e94syb1m);
  --kt6im012: var(--_1e94syb1k);
  --kt6im013: var(--_1e94syb13);
  --kt6im014: var(--_1e94syb19);
  --kt6im015: var(--_1e94syb1i);
  --kt6im016: var(--_1e94syb1p);
  --kt6im017: var(--_1e94syb1d);
}
html._1qb6bgzz .kt6im01b {
  --kt6im0y: var(--_1e94syb18);
  --kt6im0z: var(--_1e94syb16);
  --kt6im010: var(--_1e94syb1c);
  --kt6im011: var(--_1e94syb1n);
  --kt6im012: var(--_1e94syb1l);
  --kt6im013: var(--_1e94syb14);
  --kt6im014: var(--_1e94syb1a);
  --kt6im015: var(--_1e94syb1j);
  --kt6im016: var(--_1e94syb1q);
  --kt6im017: var(--_1e94syb1f);
}
html:not(._1qb6bgzz) .kt6im01c,
html:not(._1qb6bgzz) .kt6im01d,
html:not(._1qb6bgzz) .kt6im01e,
html:not(._1qb6bgzz) .kt6im01f {
  --kt6im015: var(--kt6im0y);
}
html:not(._1qb6bgzz) .kt6im01g,
html:not(._1qb6bgzz) .kt6im01h {
  --kt6im015: var(--kt6im0z);
}
html:not(._1qb6bgzz) .kt6im01i {
  --kt6im015: var(--kt6im012);
}
html:not(._1qb6bgzz) .kt6im01j {
  --kt6im015: var(--kt6im010);
}
html:not(._1qb6bgzz) .kt6im01k {
  --kt6im015: var(--kt6im011);
}
html._1qb6bgzz .kt6im01l,
html._1qb6bgzz .kt6im01m,
html._1qb6bgzz .kt6im01n,
html._1qb6bgzz .kt6im01o {
  --kt6im015: var(--kt6im0y);
}
html._1qb6bgzz .kt6im01p,
html._1qb6bgzz .kt6im01q {
  --kt6im015: var(--kt6im0z);
}
html._1qb6bgzz .kt6im01r {
  --kt6im015: var(--kt6im012);
}
html._1qb6bgzz .kt6im01s {
  --kt6im015: var(--kt6im010);
}
html._1qb6bgzz .kt6im01t {
  --kt6im015: var(--kt6im011);
}
.kt6im01u {
  color: var(--kt6im0y);
}
.kt6im01v {
  color: var(--kt6im0z);
}
.kt6im01w {
  color: var(--kt6im010);
}
.kt6im01x {
  color: var(--kt6im011);
}
.kt6im01y {
  color: var(--kt6im012);
}
.kt6im01z {
  color: var(--kt6im013);
}
.kt6im020 {
  color: var(--kt6im014);
}
.kt6im021 {
  color: var(--kt6im015);
}
.kt6im022 {
  color: var(--kt6im016);
}
.kt6im023 {
  color: var(--kt6im017);
}
.kt6im024 {
  padding-bottom: calc((var(--_1e94syb8) - var(--_1e94syb31)) / 2);
  padding-top: calc((var(--_1e94syb8) - var(--_1e94syb31)) / 2);
}
.kt6im025 {
  padding-bottom: calc((var(--_1e94syb8) - var(--_1e94syb3b)) / 2);
  padding-top: calc((var(--_1e94syb8) - var(--_1e94syb3b)) / 2);
}
.kt6im026 {
  padding-bottom: calc((var(--_1e94syb8) - var(--_1e94syb3l)) / 2);
  padding-top: calc((var(--_1e94syb8) - var(--_1e94syb3l)) / 2);
}
.kt6im027 {
  padding-bottom: calc((var(--_1e94syb8) - var(--_1e94syb3v)) / 2);
  padding-top: calc((var(--_1e94syb8) - var(--_1e94syb3v)) / 2);
}
@media screen and (min-width: 740px) {
  .kt6im04 {
    --_1d0g9qk0: var(--_1e94syb35);
    --_1d0g9qk1: var(--_1e94syb36);
    --_1d0g9qk2: var(--_1e94syb38);
    --_1d0g9qk3: var(--_1e94syb39);
  }
  .kt6im07 {
    --_1d0g9qk0: var(--_1e94syb3f);
    --_1d0g9qk1: var(--_1e94syb3g);
    --_1d0g9qk2: var(--_1e94syb3i);
    --_1d0g9qk3: var(--_1e94syb3j);
  }
  .kt6im0a {
    --_1d0g9qk0: var(--_1e94syb3p);
    --_1d0g9qk1: var(--_1e94syb3q);
    --_1d0g9qk2: var(--_1e94syb3s);
    --_1d0g9qk3: var(--_1e94syb3t);
  }
  .kt6im0d {
    --_1d0g9qk0: var(--_1e94syb3z);
    --_1d0g9qk1: var(--_1e94syb40);
    --_1d0g9qk2: var(--_1e94syb42);
    --_1d0g9qk3: var(--_1e94syb43);
  }
  .kt6im0g {
    font-size: var(--_1e94syb35);
    line-height: var(--_1e94syb36);
  }
  .kt6im0h {
    font-size: var(--_1e94syb3f);
    line-height: var(--_1e94syb3g);
  }
  .kt6im0i {
    font-size: var(--_1e94syb3p);
    line-height: var(--_1e94syb3q);
  }
  .kt6im0j {
    font-size: var(--_1e94syb3z);
    line-height: var(--_1e94syb40);
  }
  .kt6im0m {
    --_1d0g9qk0: var(--_1e94syb4c);
    --_1d0g9qk1: var(--_1e94syb4d);
    --_1d0g9qk2: var(--_1e94syb4f);
    --_1d0g9qk3: var(--_1e94syb4g);
  }
  .kt6im0p {
    --_1d0g9qk0: var(--_1e94syb4m);
    --_1d0g9qk1: var(--_1e94syb4n);
    --_1d0g9qk2: var(--_1e94syb4p);
    --_1d0g9qk3: var(--_1e94syb4q);
  }
  .kt6im0s {
    --_1d0g9qk0: var(--_1e94syb4w);
    --_1d0g9qk1: var(--_1e94syb4x);
    --_1d0g9qk2: var(--_1e94syb4z);
    --_1d0g9qk3: var(--_1e94syb50);
  }
  .kt6im0v {
    --_1d0g9qk0: var(--_1e94syb56);
    --_1d0g9qk1: var(--_1e94syb57);
    --_1d0g9qk2: var(--_1e94syb59);
    --_1d0g9qk3: var(--_1e94syb5a);
  }
  .kt6im024 {
    padding-bottom: calc((var(--_1e94syb8) - var(--_1e94syb36)) / 2);
    padding-top: calc((var(--_1e94syb8) - var(--_1e94syb36)) / 2);
  }
  .kt6im025 {
    padding-bottom: calc((var(--_1e94syb8) - var(--_1e94syb3g)) / 2);
    padding-top: calc((var(--_1e94syb8) - var(--_1e94syb3g)) / 2);
  }
  .kt6im026 {
    padding-bottom: calc((var(--_1e94syb8) - var(--_1e94syb3q)) / 2);
    padding-top: calc((var(--_1e94syb8) - var(--_1e94syb3q)) / 2);
  }
  .kt6im027 {
    padding-bottom: calc((var(--_1e94syb8) - var(--_1e94syb40)) / 2);
    padding-top: calc((var(--_1e94syb8) - var(--_1e94syb40)) / 2);
  }
}
.abr1yo6 {
  background: var(--abr1yo0);
}
.abr1yo7 {
  background: var(--abr1yo1);
}
.abr1yo8 {
  background: var(--abr1yo2);
}
.abr1yo9 {
  background: var(--abr1yo3);
}
.abr1yoa {
  background: var(--abr1yo4);
}
.abr1yob {
  background: var(--abr1yo5);
}
html:not(._1qb6bgzz) .abr1yoc {
  --abr1yo0: var(--_1e94sybu);
  --abr1yo1: var(--_1e94sybn);
  --abr1yo2: var(--_1e94sybs);
  --abr1yo3: var(--_1e94sybf);
  --abr1yo4: var(--_1e94sybh);
  --abr1yo5: var(--_1e94sybl);
}
html:not(._1qb6bgzz) .abr1yod {
  --abr1yo0: var(--_1e94sybv);
  --abr1yo1: var(--_1e94sybo);
  --abr1yo2: var(--_1e94sybt);
  --abr1yo3: var(--_1e94sybg);
  --abr1yo4: var(--_1e94sybi);
  --abr1yo5: var(--_1e94sybm);
}
html._1qb6bgzz .abr1yoe {
  --abr1yo0: var(--_1e94sybu);
  --abr1yo1: var(--_1e94sybn);
  --abr1yo2: var(--_1e94sybs);
  --abr1yo3: var(--_1e94sybf);
  --abr1yo4: var(--_1e94sybh);
  --abr1yo5: var(--_1e94sybl);
}
html._1qb6bgzz .abr1yof {
  --abr1yo0: var(--_1e94sybv);
  --abr1yo1: var(--_1e94sybo);
  --abr1yo2: var(--_1e94sybt);
  --abr1yo3: var(--_1e94sybg);
  --abr1yo4: var(--_1e94sybi);
  --abr1yo5: var(--_1e94sybm);
}
.abr1yog {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.abr1yoh {
  width: var(--_1e94sybc);
}
._1rc0ywe1 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /*
object-assign
(c) Sindre Sorhus
@license MIT
*/

/** @license React v0.20.2
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script defer
            src="scripts[0]"
    >
    </script>
    <link href="styles[0]"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1qb6bgzz,html.sprinkles_darkMode__1qb6bgzz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_default__1wfao5x0 typography_lightModeTone_light__kt6im018 typography_darkModeTone_dark__kt6im01b">
+        <div class="reset_base__ngwsb80 sprinkles_paddingBottom_gutter_mobile__1qb6bgz76 sprinkles_paddingTop_gutter_mobile__1qb6bgz66 sprinkles_paddingLeft_gutter_mobile__1qb6bgz96 sprinkles_paddingRight_gutter_mobile__1qb6bgz86 sprinkles_position_relative_mobile__1qb6bgz5a typography_lightModeTone_light__kt6im018 typography_darkModeTone_dark__kt6im01b sprinkles_background_surface_lightMode__1qb6bgz32 sprinkles_background_surfaceDark_darkMode__1qb6bgz35">
+          <span class="reset_base__ngwsb80 sprinkles_display_block_mobile__1qb6bgz4u typography_fontFamily__kt6im00 typography_fontWeight_regular__kt6im01 typography_tone_neutral__kt6im021 capsize_capsizeStyle__1d0g9qk4 typography_textSize_large__kt6im0d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
